--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,14 @@
     <string name="vk">Профиль в VK</string>
     <string name="e_mail">E-mail</string>
     <string name="mobile">Мобильный телефон</string>
-
+    <string name="user_profile_placeholder">Измените фотографию профиля</string>
+    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
+    <string name="user_profile_dialog_camera">Сделать снимок</string>
+    <string name="user_profile_dialog_cancel">Отмена</string>
+    <string name="user_profile_dialog_profile">Измените фотографию профайла</string>
+    <string name="user_profile_choose_message">Выберите фото</string>
+    <string name="error_user_phone_message">Некорректный номер</string>
+    <string name="error_user_mail_message">Некорректный E-mail.</string>
+    <string name="error_user_vk_message">Некорректный адрес страницы ВК.</string>
+    <string name="error_user_github_message">Некорректный адрес git аккаунта.</string>
 </resources>
